@@ -8,6 +8,9 @@ New in spot 2.10.1.dev  (not yet released)
   - only use sched_getcpu() and pthread_setaffinity_np() when they are
     available.
 
+  - Using ##300 in a SERE will report that the repeatition exceeds the
+    allowed value using a parse error, not as an exception.
+
 New in spot 2.10.1  (2021-11-19)
 
   Build:
